made changes to api to work with username instead of user id