@@ -6,6 +6,7 @@ import com.amazonaws.services.s3.model.ObjectMetadata;
 import com.amazonaws.services.s3.model.S3Object;
 import com.aonufrei.gallerywebapp.dto.PictureInfoDto;
 import com.aonufrei.gallerywebapp.dto.PictureOutDto;
+import com.aonufrei.gallerywebapp.exceptions.PictureNotFoundException;
 import com.aonufrei.gallerywebapp.model.Picture;
 import com.aonufrei.gallerywebapp.repo.PictureRepository;
 import org.apache.commons.io.IOUtils;
@@ -16,14 +17,14 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import javax.imageio.ImageIO;
-import javax.transaction.Transactional;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.List;
-import java.util.Objects;
+import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -48,48 +49,66 @@ public class PictureService {
 		this.s3Client = s3Client;
 	}
 
-	public byte[] getPictureByToken(String token) throws IOException {
+	public byte[] getPictureByToken(String username, String token) throws IOException {
 		if (!pictureRepository.existsPictureByToken(token)) {
-			throw new RuntimeException("Picture with specified token cannot be found");
+			throw new PictureNotFoundException("Picture with specified token cannot be found");
 		}
-		return getS3PictureByToken(token);
+		return getS3PictureByPath(token);
 	}
 
 	public List<PictureOutDto> getAllPublicImages(Integer pageSize, Integer pageNumber) {
-		return pictureRepository.getPicturesByIsSharedToPublic(true, Pageable.ofSize(pageSize).withPage(pageNumber))
-				.stream()
-				.map(this::convertModelToOutDto)
-				.collect(Collectors.toList());
+		return convertModelsToOutDto(pictureRepository.getPicturesByIsSharedToPublic(true, Pageable.ofSize(pageSize).withPage(pageNumber)).toList());
 	}
 
-	public List<PictureOutDto> getPicturesForUser(Integer currentUserId, Integer userId, Integer pageSize, Integer pageNumber) {
+	public List<PictureOutDto> getPicturesForUser(Integer currentUserId, String username, Integer pageSize, Integer pageNumber) {
 		Pageable pageable = Pageable.ofSize(pageSize).withPage(pageNumber);
-		Page<Picture> result = currentUserId != null && currentUserId.equals(userId)
-				? pictureRepository.getPicturesByOwnerIdOrderByModifiedAt(userId, pageable)
-				: pictureRepository.getPicturesByOwnerIdAndIsSharedToPublicOrderByModifiedAt(userId, true, pageable);
-		return result.stream()
-				.map(this::convertModelToOutDto)
-				.collect(Collectors.toList());
+		Integer ownerId = accountService.getIdByUsername(username);
+		Page<Picture> result = currentUserId != null && currentUserId.equals(ownerId)
+				? pictureRepository.getPicturesByOwnerIdOrderByModifiedAt(ownerId, pageable)
+				: pictureRepository.getPicturesByOwnerIdAndIsSharedToPublicOrderByModifiedAt(ownerId, true, pageable);
+		return convertModelsToOutDto(result.toList());
 	}
 
-	public PictureOutDto getPictureByOwnerAndName(Integer currentUser, Integer userId, String name) {
-		PictureOutDto picture = this.getPictureForUser(name, userId);
-		if (picture != null && (picture.getIsPublic() || Objects.equals(currentUser, userId))) {
-			return picture;
+	public PictureOutDto getPictureInfoByUsernameAndToken(Integer currentUser, String username, String token) {
+		PictureOutDto pictureInfo = getPictureInfoByUsernameAndToken(username, token);
+		if (pictureInfo.getIsPublic()) {
+			return pictureInfo;
 		}
-		throw new RuntimeException("Picture was not found");
+		if (accountService.isSameAccount(currentUser, username)) {
+			return pictureInfo;
+		}
+		throw new PictureNotFoundException(genPictureNotFoundMessage(username, token));
 	}
 
-	public byte[] getS3PictureByToken(String token) throws IOException {
-		try (InputStream bImage = getPictureFromS3(token)) {
+	public byte[] getPictureBytesByUsernameAndToken(Integer currentUser, String username, String token) {
+		if (!pictureRepository.doesUserHasImage(username, token)
+				|| (!pictureRepository.isPicturePublic(username, token)
+				&& !accountService.isSameAccount(currentUser, username))) {
+			throw new PictureNotFoundException(genPictureNotFoundMessage(username, token));
+		}
+		try {
+			String path = generateS3Path(username, token);
+			return getS3PictureByPath(path);
+		} catch (IOException e) {
+			LOG.error("Error when getting picture from s3", e);
+			throw new PictureNotFoundException(genPictureNotFoundMessage(username, token));
+		}
+	}
+
+	public static String genPictureNotFoundMessage(String ownerUsername, String pictureToken) {
+		return String.format("Picture [%s] was not found for user [%s]", pictureToken, ownerUsername);
+	}
+
+	public byte[] getS3PictureByPath(String path) throws IOException {
+		try (InputStream bImage = getPictureFromS3(path)) {
 			return IOUtils.toByteArray(bImage);
 		}
 	}
 
-	public InputStream getPictureFromS3(String s3PictureName) {
-		S3Object s3Picture = s3Client.getObject(bucketName, s3PictureName);
+	public InputStream getPictureFromS3(String s3PicturePath) {
+		S3Object s3Picture = s3Client.getObject(bucketName, s3PicturePath);
 		if (s3Picture == null) {
-			LOG.error("Picture " + s3PictureName + " was not found in s3");
+			LOG.error("Picture [" + s3PicturePath + "] was not found in s3");
 			throw new RuntimeException("Picture was not found in s3");
 		}
 		return s3Picture.getObjectContent();
@@ -102,8 +121,31 @@ public class PictureService {
 	}
 
 	private PictureOutDto convertModelToOutDto(Picture picture) {
-		String pictureUrl = String.format("%sapi/v1/picture/specific?pic=%s", hostPrefix, picture.getToken());
+		String ownerUsername = picture.getOwner() != null
+				? picture.getOwner().getUsername()
+				: accountService.getUsernameById(picture.getOwnerId());
+		String pictureUrl = String.format("%sapi/v1/picture/%s/%s/pic", hostPrefix, ownerUsername, picture.getToken());
 		return new PictureOutDto(picture.getName(), picture.getIsSharedToPublic(), pictureUrl, picture.getCreatedAt());
+	}
+
+	private List<PictureOutDto> convertModelsToOutDto(List<Picture> pictures) {
+		List<Integer> pictureIds = pictures.stream().map(Picture::getOwnerId).distinct().collect(Collectors.toList());
+		Map<Integer, String> idToUsernameMap = accountService.getIdToUsernameMap(pictureIds);
+		return pictures.stream().filter(p -> idToUsernameMap.containsKey(p.getOwnerId()))
+				.map(p -> new PictureOutDto(
+						p.getName(),
+						p.getIsSharedToPublic(),
+						String.format("%sapi/v1/picture/%s/%s/pic", hostPrefix, idToUsernameMap.get(p.getOwnerId()), p.getToken()),
+						p.getCreatedAt()
+				))
+				.collect(Collectors.toList());
+	}
+
+	public PictureOutDto getPictureInfoByUsernameAndToken(String username, String token) {
+		if (!pictureRepository.doesUserHasImage(username, token)) {
+			throw new PictureNotFoundException(String.format("Picture [%s/%s] was not found", username, token));
+		}
+		return convertModelToOutDto(pictureRepository.getPictureByOwnerNameAndToken(username, token));
 	}
 
 	public PictureOutDto getPictureForUser(String name, Integer ownerId) {
@@ -117,6 +159,7 @@ public class PictureService {
 		}
 		return convertModelToOutDto(pictureFromDb);
 	}
+
 	public PictureOutDto savePicture(Integer ownerId, PictureInfoDto pictureInfoDto, MultipartFile file) throws IOException {
 		validatePictureInfo(pictureInfoDto);
 		String ownerUsername = accountService.getUsernameById(ownerId);
@@ -133,7 +176,7 @@ public class PictureService {
 		}
 
 		String token = generateNewPictureToken();
-		saveFileToS3(token, file);
+		saveFileToS3(generateS3Path(ownerUsername, token), file);
 		Picture pictureForDb = Picture.builder()
 				.name(name)
 				.isSharedToPublic(isPublic)
@@ -150,6 +193,10 @@ public class PictureService {
 		return getPictureForUser(name, ownerId);
 	}
 
+	private String generateS3Path(String ownerUsername, String token) {
+		return String.format("%s/%s", ownerUsername, token);
+	}
+
 	private String generateNewPictureToken() {
 		while (true) {
 			String token = RandomStringUtils.random(8, true, true);
@@ -160,11 +207,16 @@ public class PictureService {
 	}
 
 	@Transactional
-	public PictureOutDto changeVisibility(Integer ownerId, String pictureName, boolean isPublic) throws IOException {
-		Picture targetPicture = pictureRepository.getPictureByNameAndOwnerId(pictureName, ownerId);
-		targetPicture.setIsSharedToPublic(isPublic);
-		pictureRepository.save(targetPicture);
-		return convertModelToOutDto(targetPicture);
+	public PictureOutDto updatePictureInformation(String username, String token, PictureInfoDto pictureInfoDto) {
+		Picture pictureToUpdate = pictureRepository.getPictureByOwnerNameAndToken(username, token);
+		if (pictureInfoDto.getName() != null) {
+			pictureToUpdate.setName(pictureInfoDto.getName());
+		}
+		if (pictureInfoDto.getIsSharedToPublic() != null) {
+			pictureToUpdate.setIsSharedToPublic(pictureInfoDto.getIsSharedToPublic());
+		}
+		pictureRepository.save(pictureToUpdate);
+		return convertModelToOutDto(pictureToUpdate);
 	}
 
 	public String createS3PictureName(String ownerUsername, String pictureName) {
@@ -178,23 +230,19 @@ public class PictureService {
 		s3Client.putObject(bucketName, key, multipartFile.getInputStream(), data);
 	}
 
-	public void deletePicture(Integer id) {
-		pictureRepository.deleteById(id);
-	}
-
-	public void deletePicture(String name, Integer ownerId) {
-		Picture targetPicture = pictureRepository.getPictureByNameAndOwnerId(name, ownerId);
-		if (targetPicture == null) return;
-		try {
-			pictureRepository.deleteById(targetPicture.getId());
-		} catch (Exception e) {
-			LOG.error("Error during deleting picture with id: " + targetPicture.getId(), e);
-			return;
+	public boolean deletePicture(String ownerUsername, String pictureToken) {
+		if (!pictureRepository.doesUserHasImage(ownerUsername, pictureToken)) {
+			return false;
 		}
-		String ownerUsername = accountService.getUsernameById(ownerId);
-		DeleteObjectRequest deletePictureRequest =
-				new DeleteObjectRequest(bucketName, createS3PictureName(ownerUsername, name));
-		s3Client.deleteObject(deletePictureRequest);
+		pictureRepository.deleteByOwnerNameAndToken(ownerUsername, pictureToken);
+		String s3PicturePath = generateS3Path(ownerUsername, pictureToken);
+		try {
+			DeleteObjectRequest deletePictureRequest = new DeleteObjectRequest(bucketName, s3PicturePath);
+			s3Client.deleteObject(deletePictureRequest);
+		} catch (Throwable t) {
+			LOG.error(String.format("Cannot delete picture from s3 [ %s ]", s3PicturePath), t);
+		}
+		return true;
 	}
 
 	public static void validatePictureInfo(PictureInfoDto pictureInfoDto) {
